Assert on selecting object in outliner #116193

Closed
opened 2023-12-14 17:14:53 +01:00 by Stephen Boddy · 2 comments

System Information
Operating system: Linux-5.15.0-91-generic-x86_64-with-glibc2.35 64 Bits, X11 UI
Graphics card: Mesa Intel(R) HD Graphics 630 (KBL GT2) Intel 4.6 (Core Profile) Mesa 23.0.4-0ubuntu1~22.04.1

Blender Version
Broken: version: 4.1.0 Alpha, branch: main (modified), commit date: 2023-12-14 15:17, hash: 4a34dcbb6970
Worked: 4.0.2 (haven't bisected 4.1.0 Alpha)

Short description of error
Crash of Blender when trying to select any non-collection object in the outliner.

Exact steps for others to reproduce the error
Open Blender with the default startup file.
By default cube is selected.
In the outliner try to left-click on the cube, the light or the camera. Instant crash with:
BLI_assert failed: source/blender/blenkernel/intern/layer.cc:993, BKE_view_layer_synced_ensure(), at 'scene'

GDB backtrace:

#0  __pthread_kill_implementation (no_tid=0, signo=6, threadid=140737169122560) at ./nptl/pthread_kill.c:44
#1  __pthread_kill_internal (signo=6, threadid=140737169122560) at ./nptl/pthread_kill.c:78
#2  __GI___pthread_kill (threadid=140737169122560, signo=signo@entry=6) at ./nptl/pthread_kill.c:89
#3  0x00007fffeea90476 in __GI_raise (sig=sig@entry=6) at ../sysdeps/posix/raise.c:26
#4  0x00007fffeea767f3 in __GI_abort () at ./stdlib/abort.c:79
#5  0x00000000014b8b22 in _BLI_assert_abort () at /home/steve/git/blender/source/blender/blenlib/intern/BLI_assert.c:48
#6  0x0000000000932ae3 in BKE_view_layer_synced_ensure(Scene const*, ViewLayer*) (scene=0x0, view_layer=0x7fffdf943208)
    at /home/steve/git/blender/source/blender/blenkernel/intern/layer.cc:993
#7  0x0000000003314902 in blender::ed::outliner::tree_element_object_activate(bContext*, Scene*, ViewLayer*, blender::ed::outliner::TreeElement*, blender::ed::outliner::eOLSetState, bool) (C=0x7fffea053388, scene=0x7fffdf93cc08, view_layer=0x7fffdf943208, te=0x7fffa498eda8, set=blender::ed::outliner::OL_SETSEL_NORMAL, recursive=false)
    at /home/steve/git/blender/source/blender/editors/space_outliner/outliner_select.cc:331
#8  0x0000000003317587 in blender::ed::outliner::do_outliner_item_activate_tree_element(bContext*, blender::ed::outliner::TreeViewContext const*, SpaceOutliner*, blender::ed::outliner::TreeElement*, TreeStoreElem*, bool, bool, bool)
    (C=0x7fffea053388, tvc=0x7fffffffd210, space_outliner=0x7fffdf99af08, te=0x7fffa498eda8, tselem=0x7fffdfa47080, extend=false, recursive=false, do_activate_data=true)
    at /home/steve/git/blender/source/blender/editors/space_outliner/outliner_select.cc:1447
#9  0x0000000003317b9b in blender::ed::outliner::outliner_item_select(bContext*, SpaceOutliner*, blender::ed::outliner::TreeElement*, short)
    (C=0x7fffea053388, space_outliner=0x7fffdf99af08, te=0x7fffa498eda8, select_flag=7)
    at /home/steve/git/blender/source/blender/editors/space_outliner/outliner_select.cc:1559
#10 0x00000000033181e0 in blender::ed::outliner::outliner_item_do_activate_from_cursor(bContext*, int const*, bool, bool, bool)
    (C=0x7fffea053388, mval=0x7fffffffd2f0, extend=false, use_range=false, deselect_all=true)
    at /home/steve/git/blender/source/blender/editors/space_outliner/outliner_select.cc:1731
#11 0x0000000003318334 in blender::ed::outliner::outliner_item_activate_invoke(bContext*, wmOperator*, wmEvent const*)
    (C=0x7fffea053388, op=0x7fff97834688, event=0x7fffffffd3b0) at /home/steve/git/blender/source/blender/editors/space_outliner/outliner_select.cc:1769
#12 0x00000000016c69a3 in wm_operator_invoke(bContext*, wmOperatorType*, wmEvent const*, PointerRNA*, ReportList*, bool, bool)
    (C=0x7fffea053388, ot=0x7fffdf7f4c08, event=0x7fffa49a2238, properties=0x7fffabbb79e8, reports=0x0, poll_only=false, use_last_properties=true)
    at /home/steve/git/blender/source/blender/windowmanager/intern/wm_event_system.cc:1550
#13 0x00000000016c94c3 in wm_handler_operator_call(bContext*, ListBase*, wmEventHandler*, wmEvent*, PointerRNA*, char const*)
    (C=0x7fffea053388, handlers=0x7fffdfa3a0c8, handler_base=0x7fffde934048, event=0x7fffa49a2238, properties=0x7fffabbb79e8, kmi_idname=0x7fffabbc73d8 "OUTLINER_OT_item_activate") at /home/steve/git/blender/source/blender/windowmanager/intern/wm_event_system.cc:2581
#14 0x00000000016caadc in wm_handlers_do_keymap_with_keymap_handler(bContext*, wmEvent*, ListBase*, wmEventHandler_Keymap*, wmKeyMap*, bool)
    (C=0x7fffea053388, event=0x7fffa49a2238, handlers=0x7fffdfa3a0c8, handler=0x7fffde934048, keymap=0x7fffabb99e48, do_debug_handler=false)
    at /home/steve/git/blender/source/blender/windowmanager/intern/wm_event_system.cc:2982
#15 0x00000000016cc92a in wm_handlers_do_intern(bContext*, wmWindow*, wmEvent*, ListBase*)
    (C=0x7fffea053388, win=0x7fffdf98ae08, event=0x7fffa49a2238, handlers=0x7fffdfa3a0c8)
    at /home/steve/git/blender/source/blender/windowmanager/intern/wm_event_system.cc:3313
#16 0x00000000016cdb79 in wm_handlers_do(bContext*, wmEvent*, ListBase*) (C=0x7fffea053388, event=0x7fffa49a2238, handlers=0x7fffdfa3a0c8)
    at /home/steve/git/blender/source/blender/windowmanager/intern/wm_event_system.cc:3569
#17 0x00000000016ce837 in wm_event_do_region_handlers(bContext*, wmEvent*, ARegion*) (C=0x7fffea053388, event=0x7fffa49a2238, region=0x7fffdfa39f88)
    at /home/steve/git/blender/source/blender/windowmanager/intern/wm_event_system.cc:3876
#18 0x00000000016ce9a6 in wm_event_do_handlers_area_regions(bContext*, wmEvent*, ScrArea*) (C=0x7fffea053388, event=0x7fffa49a2238, area=0x7fffdfa41a88)
    at /home/steve/git/blender/source/blender/windowmanager/intern/wm_event_system.cc:3908
#19 0x00000000016cf938 in wm_event_do_handlers(bContext*) (C=0x7fffea053388) at /home/steve/git/blender/source/blender/windowmanager/intern/wm_event_system.cc:4132
#20 0x00000000016bae0f in WM_main(bContext*) (C=0x7fffea053388) at /home/steve/git/blender/source/blender/windowmanager/intern/wm.cc:613
#21 0x00000000007ac8e8 in main(int, char const**) (argc=1, argv=0x7fffffffddf8) at /home/steve/git/blender/source/creator/creator.cc:576
**System Information** Operating system: Linux-5.15.0-91-generic-x86_64-with-glibc2.35 64 Bits, X11 UI Graphics card: Mesa Intel(R) HD Graphics 630 (KBL GT2) Intel 4.6 (Core Profile) Mesa 23.0.4-0ubuntu1~22.04.1 **Blender Version** Broken: version: 4.1.0 Alpha, branch: main (modified), commit date: 2023-12-14 15:17, hash: `4a34dcbb6970` Worked: 4.0.2 (haven't bisected 4.1.0 Alpha) **Short description of error** Crash of Blender when trying to select any non-collection object in the outliner. **Exact steps for others to reproduce the error** Open Blender with the default startup file. By default cube is selected. In the outliner try to left-click on the cube, the light or the camera. Instant crash with: `BLI_assert failed: source/blender/blenkernel/intern/layer.cc:993, BKE_view_layer_synced_ensure(), at 'scene'` GDB backtrace: ``` #0 __pthread_kill_implementation (no_tid=0, signo=6, threadid=140737169122560) at ./nptl/pthread_kill.c:44 #1 __pthread_kill_internal (signo=6, threadid=140737169122560) at ./nptl/pthread_kill.c:78 #2 __GI___pthread_kill (threadid=140737169122560, signo=signo@entry=6) at ./nptl/pthread_kill.c:89 #3 0x00007fffeea90476 in __GI_raise (sig=sig@entry=6) at ../sysdeps/posix/raise.c:26 #4 0x00007fffeea767f3 in __GI_abort () at ./stdlib/abort.c:79 #5 0x00000000014b8b22 in _BLI_assert_abort () at /home/steve/git/blender/source/blender/blenlib/intern/BLI_assert.c:48 #6 0x0000000000932ae3 in BKE_view_layer_synced_ensure(Scene const*, ViewLayer*) (scene=0x0, view_layer=0x7fffdf943208) at /home/steve/git/blender/source/blender/blenkernel/intern/layer.cc:993 #7 0x0000000003314902 in blender::ed::outliner::tree_element_object_activate(bContext*, Scene*, ViewLayer*, blender::ed::outliner::TreeElement*, blender::ed::outliner::eOLSetState, bool) (C=0x7fffea053388, scene=0x7fffdf93cc08, view_layer=0x7fffdf943208, te=0x7fffa498eda8, set=blender::ed::outliner::OL_SETSEL_NORMAL, recursive=false) at /home/steve/git/blender/source/blender/editors/space_outliner/outliner_select.cc:331 #8 0x0000000003317587 in blender::ed::outliner::do_outliner_item_activate_tree_element(bContext*, blender::ed::outliner::TreeViewContext const*, SpaceOutliner*, blender::ed::outliner::TreeElement*, TreeStoreElem*, bool, bool, bool) (C=0x7fffea053388, tvc=0x7fffffffd210, space_outliner=0x7fffdf99af08, te=0x7fffa498eda8, tselem=0x7fffdfa47080, extend=false, recursive=false, do_activate_data=true) at /home/steve/git/blender/source/blender/editors/space_outliner/outliner_select.cc:1447 #9 0x0000000003317b9b in blender::ed::outliner::outliner_item_select(bContext*, SpaceOutliner*, blender::ed::outliner::TreeElement*, short) (C=0x7fffea053388, space_outliner=0x7fffdf99af08, te=0x7fffa498eda8, select_flag=7) at /home/steve/git/blender/source/blender/editors/space_outliner/outliner_select.cc:1559 #10 0x00000000033181e0 in blender::ed::outliner::outliner_item_do_activate_from_cursor(bContext*, int const*, bool, bool, bool) (C=0x7fffea053388, mval=0x7fffffffd2f0, extend=false, use_range=false, deselect_all=true) at /home/steve/git/blender/source/blender/editors/space_outliner/outliner_select.cc:1731 #11 0x0000000003318334 in blender::ed::outliner::outliner_item_activate_invoke(bContext*, wmOperator*, wmEvent const*) (C=0x7fffea053388, op=0x7fff97834688, event=0x7fffffffd3b0) at /home/steve/git/blender/source/blender/editors/space_outliner/outliner_select.cc:1769 #12 0x00000000016c69a3 in wm_operator_invoke(bContext*, wmOperatorType*, wmEvent const*, PointerRNA*, ReportList*, bool, bool) (C=0x7fffea053388, ot=0x7fffdf7f4c08, event=0x7fffa49a2238, properties=0x7fffabbb79e8, reports=0x0, poll_only=false, use_last_properties=true) at /home/steve/git/blender/source/blender/windowmanager/intern/wm_event_system.cc:1550 #13 0x00000000016c94c3 in wm_handler_operator_call(bContext*, ListBase*, wmEventHandler*, wmEvent*, PointerRNA*, char const*) (C=0x7fffea053388, handlers=0x7fffdfa3a0c8, handler_base=0x7fffde934048, event=0x7fffa49a2238, properties=0x7fffabbb79e8, kmi_idname=0x7fffabbc73d8 "OUTLINER_OT_item_activate") at /home/steve/git/blender/source/blender/windowmanager/intern/wm_event_system.cc:2581 #14 0x00000000016caadc in wm_handlers_do_keymap_with_keymap_handler(bContext*, wmEvent*, ListBase*, wmEventHandler_Keymap*, wmKeyMap*, bool) (C=0x7fffea053388, event=0x7fffa49a2238, handlers=0x7fffdfa3a0c8, handler=0x7fffde934048, keymap=0x7fffabb99e48, do_debug_handler=false) at /home/steve/git/blender/source/blender/windowmanager/intern/wm_event_system.cc:2982 #15 0x00000000016cc92a in wm_handlers_do_intern(bContext*, wmWindow*, wmEvent*, ListBase*) (C=0x7fffea053388, win=0x7fffdf98ae08, event=0x7fffa49a2238, handlers=0x7fffdfa3a0c8) at /home/steve/git/blender/source/blender/windowmanager/intern/wm_event_system.cc:3313 #16 0x00000000016cdb79 in wm_handlers_do(bContext*, wmEvent*, ListBase*) (C=0x7fffea053388, event=0x7fffa49a2238, handlers=0x7fffdfa3a0c8) at /home/steve/git/blender/source/blender/windowmanager/intern/wm_event_system.cc:3569 #17 0x00000000016ce837 in wm_event_do_region_handlers(bContext*, wmEvent*, ARegion*) (C=0x7fffea053388, event=0x7fffa49a2238, region=0x7fffdfa39f88) at /home/steve/git/blender/source/blender/windowmanager/intern/wm_event_system.cc:3876 #18 0x00000000016ce9a6 in wm_event_do_handlers_area_regions(bContext*, wmEvent*, ScrArea*) (C=0x7fffea053388, event=0x7fffa49a2238, area=0x7fffdfa41a88) at /home/steve/git/blender/source/blender/windowmanager/intern/wm_event_system.cc:3908 #19 0x00000000016cf938 in wm_event_do_handlers(bContext*) (C=0x7fffea053388) at /home/steve/git/blender/source/blender/windowmanager/intern/wm_event_system.cc:4132 #20 0x00000000016bae0f in WM_main(bContext*) (C=0x7fffea053388) at /home/steve/git/blender/source/blender/windowmanager/intern/wm.cc:613 #21 0x00000000007ac8e8 in main(int, char const**) (argc=1, argv=0x7fffffffddf8) at /home/steve/git/blender/source/creator/creator.cc:576 ```
Stephen Boddy added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-12-14 17:14:54 +01:00

I confirm the triggering of an assert caused by b840ba1f59
@mont29 ^

I confirm the triggering of an assert caused by b840ba1f59 @mont29 ^
Germano Cavalcante added
Module
Core
Status
Confirmed
and removed
Status
Needs Triage
labels 2023-12-14 22:19:19 +01:00
Germano Cavalcante changed title from 4.1 alpha regression, crash on selecting object in outliner to Assert on selecting object in outliner 2023-12-14 22:19:35 +01:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-12-15 10:38:31 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#116193
No description provided.